[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-control"
version = "0.1.0"
description = "TCP client CLI for gate access controllers"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
gate-control = "gate_control.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
